--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="<PLACE YOUR API KEY HERE!>" />
+            android:value="AIzaSyBJe2nzF3PCA3zMUBcFlfMWQdw8tXyQL2E" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
