--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Tue Mar 28 14:35:26 CST 2017
 systemProp.http.proxyHost=
 org.gradle.jvmargs=-Xmx1536m
 systemProp.http.proxyPort=
+android.useAndroidX=true
+android.enableJetifier=true
